Honor ThreadInfoMapper and keep the dashboard summary cheap
The Thread Dump panel read java.lang.management.ThreadMXBean directly, so a
configured ThreadInfoMapper -- the extension point ThreadDumpEndpoint applies --
was bypassed: an application filtering or redacting threads for the endpoint
still saw every thread in the panel. Thread data now always goes through the
mapper bean. A mapper that emits something other than ThreadInfo describes a
shape the panel cannot render, so the panel reports how many entries the mapper
emitted and shows no thread details instead of falling back to the unmapped
data.

Rendering the dashboard also collected a full dump: every stack frame plus
locked monitors and synchronizers, on every visit to the main category, even
though the card only shows counts. getBody() and getBadge() now use
getThreadInfo(getAllThreadIds(), 0), and the new getThreadDump() accessor takes
the complete dump for the detail view and its refresh only.

Both paths are covered by regressions: a filtering mapper that leaves a single
thread, a custom-shape mapper, and a recording thread source asserting which
call path requests a full dump.